--- a/prep_combined_dataset.ipynb
+++ b/prep_combined_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "[2 rows x 120 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -740,11 +740,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_data_alibaba.drop(columns=['Fiscal Date Ending'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data successfully saved to income_statement_alibaba_usd.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the combined DataFrame to an Excel file\n",
+    "file_path = 'income_statement_alibaba_usd_dirty.xlsx'\n",
+    "merged_data_alibaba.to_excel(file_path, index=False, engine='openpyxl')\n",
+    "\n",
+    "print(f'Data successfully saved to {file_path}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## here"
    ]
   },
   {
