--- a/prep_combined_dataset.ipynb
+++ b/prep_combined_dataset.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Open the files of all incomes\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -55,6 +62,13 @@
     "\n",
     "# Load the CSV file into a DataFrame\n",
     "shopify_income = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## checked the dfs and the columns"
    ]
   },
   {
@@ -296,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## added one more df: the exchange rate monthly from CNY to USD so I could transfor the alibaba income to USD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -441,6 +462,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## covert to the right data type, get the avergae exchange rate per year and create the new df with year columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -475,6 +503,13 @@
     "CNY_to_USD_yearly.columns = CNY_to_USD_yearly.columns.year\n",
     "\n",
     "print(CNY_to_USD_yearly)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I still need the avg from all four values per year because I have the open, high, low and close rates\n"
    ]
   },
   {
@@ -540,6 +575,13 @@
    ],
    "source": [
     "alibaba_income.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## create a coulmn year in the alibaba dataset so I can merge"
    ]
   },
   {
@@ -772,7 +814,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## here"
+    "## after I have merged and got the amount in dollars for all columns, I get rid of the columns with the different currency"
    ]
   },
   {
@@ -980,6 +1022,13 @@
    ],
    "source": [
     "merged_data_alibaba.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now I can add company name to all dfs and then combine them"
    ]
   },
   {
